[package]
name = "dynamics_py"
version = "0.1.2"
edition = "2024"

[lib]
crate-type = ["cdylib"]


[dependencies]
dynamics_rs = { package = "dynamics", path = ".." }

bio_files = "0.3.2"
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py310"] }
lin_alg = "1.3.9"

[target.'cfg(not(target_os = "windows"))'.dependencies]
cudarc = { version = "0.17.2", default-features = false, features = ["std", "driver", "dynamic-linking", "cuda-13000"], optional=true }
[target.'cfg(target_os = "windows")'.dependencies]
# Note: On windows, for the Python bindings only, Dynamic linking seems not to work.
cudarc = { version = "0.17.2", default-features = false, features = ["std", "driver", "dynamic-loading", "cuda-13000"], optional=true }


[build-dependencies]
cuda_setup = { version = "0.1.9", optional = true }

[features]
default = ["cuda"]


# Note: For now we use CUDA for short-range interactions, but not for the long-range interactions.
# todo: Once vkFFT is working, try adding that.
cuda = ["cudarc", "dynamics_rs/cuda"]
#cuda = ["cudarc", "dynamics_rs/cuda", "dynamics_rs/vkfft"]